The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.11 [20160426] [svn: r291]
  - shellcheck corrections on scripts
  - vpd: decode TransportIDs in SCSI port page
  - point svn:externals to rev 694 of sg3_utils
  - upgrade automake to version 1.15 (U16.04)

ChangeLog for sdparm-1.10 [20160222] [svn: r279]
  - add --inhex=FN option for decoding without device present,
    FN is interpreted as response to mode sense(10) command
  - add --raw option to interpret FN as binary (def: ASCII hex)
  - add --pdt=PDT option for use with --inhex=FN
  - --quiet used twice hides changeable, default + saved
  - add IO advice hints grouping mode page (sbc4r06, 8)
  - add Unit serial number VPD page specific sanity check
  - add NO_PI_CHK to Supported block lengths and protection
    types VPD page
  - add Background operation control mpage (sbc4r07)
  - Read-write error recovery mpage: add Misaligned writes
    reporting field (MWR)
  - sync tape mpages with ssc5r02
  - add Block limits extension VPD page
  - add Device constituents VPD page
  - add LB protection VPD page (ssc5r02a)
  - LB provisioning VPD page: expand LBPRZ, add Minimum and
    Threshold percentage fields
  - device identification VPD page: add decoding for locally
    assigned UUIDs (spc5r08)
  - the --inhex=FN option together with --inquiry decodes
    FN as a single VPD page
  - improve lto5 and lto6 vendor mpage support
  - sync to spc5r08 and sbc4r10
  - add SAS G5 (22.5 Gbps) settings (spl4r06)
  - point svn:externals to rev 663 of sg3_utils
  - upgrade automake to version 1.15 (U15.10)
  - autogen.sh: upgrade to buildconf 20091223 version

ChangeLog for sdparm-1.09 [20141226] [svn: r257]
  - decode Third Party Copy VPD page
  - Supported block lengths and protection types (sbc4r01) +
    Block device characteristics extension VPD pages added